# mltb2

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  api-reference.html  code-doc.html  doc.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: build_deploy_doc.yml  mypy_check.yml  pypi_upload.yml  pytest.yml  ruff_check.yml  static_checks.yml
_modules/: index.html
_modules/mltb2/: arangodb.html  bs.html  data.html  db.html  fasttext.html  fasttxt.html  files.html  md.html  openai.html  optuna.html  optuna_tool.html  plot.html  somajo.html  somajo_tool.html  somajo_transformers.html  somajo_xformer.html  text.html  transformers.html  xformer.html
_sources/: code-doc.rst.txt  index.rst.txt
_sources/api-reference/: arangodb.rst.txt  files.rst.txt  optuna.rst.txt  somajo.rst.txt  somajo_transformers.rst.txt  text.rst.txt  transformers.rst.txt
_sources/code-doc/: optuna.rst.txt
api-reference/: arangodb.html  bs.html  data.html  db.html  fasttext.html  fasttxt.html  files.html  md.html  openai.html  optuna.html  plot.html  somajo.html  somajo_transformers.html  text.html  transformers.html
code-doc/: optuna.html  plot.html  somajo.html  somajo_transformers.html  transformers.html
doc/: SignificanceRepeatedTrainingPruner.html
docs/source/: api-reference.rst  conf.py  index.rst
docs/source/api-reference/: bs.rst  data.rst  db.rst  fasttext.rst  fasttxt.rst  md.rst  metrics.rst  openai.rst  optuna.rst  somajo.rst  somajo_transformers.rst
docs/source/code-doc/: plot.rst  transformers.rst
docs/source/doc/: SignificanceRepeatedTrainingPruner.rst
mltb2/: __init__.py  arangodb.py  bs.py  data.py  db.py  fasttext.py  fasttxt.py  files.py  md.py  metrics.py  openai.py  optuna.py  optuna_tool.py  plot.py  somajo.py  somajo_tool.py  somajo_transformers.py  somajo_xformer.py  text.py  tokenizer.py  transformers.py  xformer.py
tests/: __init__.py  ori_data_loader.py  test__init__.py  test_bs.py  test_data.py  test_fasttext.py  test_fasttxt.py  test_files.py  test_md.py  test_metrics.py  test_openai.py  test_optuna.py  test_optuna_tool.py  test_somajo.py  test_somajo_tool.py  test_somajo_transformers.py  test_somajo_xformer.py  test_text.py  test_tokenizer.py  test_transformers.py  test_xformer.py
